Project pics addition, links working

--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,9 @@ html{
   z-index: 10;
   border-radius: 50%;
 }
-.github-link > div{
+
+
+.github-link > div:first-child{
   width: 15px;
   height: 15px;
   display: -webkit-box;
@@ -131,6 +133,28 @@ html{
       -ms-flex-align: center;
           align-items: center;
   font-size: 1.5rem;
+}
+
+.github-link:hover > .gh-tip{
+  opacity: 1;
+    -webkit-transform: translateX(15px);
+        -ms-transform: translateX(15px);
+            transform: translateX(15px);
+}
+.gh-tip{
+  opacity: 0;
+  -webkit-transform: translateX(-10px);
+      -ms-transform: translateX(-10px);
+          transform: translateX(-10px);
+  position: absolute;
+  left: 100%;
+  top: 100%;
+  font-size: 16px;
+  width: 10vw;
+  line-height: 25px;
+  -webkit-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 .linkedin-link{
   width: 60px;
@@ -151,7 +175,7 @@ html{
     z-index: 10;
   border-radius: 50%;
 }
-.linkedin-link > div{
+.linkedin-link > div:first-child{
   width: 15px;
   height: 15px;
   display: -webkit-box;
@@ -167,6 +191,27 @@ html{
       -ms-flex-align: center;
           align-items: center;
   font-size: 1.5rem;
+}
+.linkedin-link:hover > .l-tip{
+  opacity: 1;
+    -webkit-transform: translateX(15px);
+        -ms-transform: translateX(15px);
+            transform: translateX(15px);
+}
+.l-tip{
+  opacity: 0;
+  -webkit-transform: translateX(-10px);
+      -ms-transform: translateX(-10px);
+          transform: translateX(-10px);
+  position: absolute;
+  left: 100%;
+  bottom: 100%;
+  font-size: 16px;
+  width: 10vw;
+  line-height: 25px;
+  -webkit-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 .instagram-link{
   width: 60px;
@@ -187,7 +232,7 @@ html{
   z-index: 10;
   border-radius: 50%;
 }
-.instagram-link > div{
+.instagram-link > div:first-child{
   width: 15px;
   height: 15px;
   display: -webkit-box;
@@ -203,6 +248,28 @@ html{
       -ms-flex-align: center;
           align-items: center;
   font-size: 1.5rem;
+}
+.instagram-link:hover > .i-tip{
+  opacity: 1;
+    -webkit-transform: translateX(-15px);
+        -ms-transform: translateX(-15px);
+            transform: translateX(-15px);
+}
+.i-tip{
+  opacity: 0;
+  -webkit-transform: translateX(10px);
+      -ms-transform: translateX(10px);
+          transform: translateX(10px);
+  position: absolute;
+  right: 100%;
+  text-align: right;
+  bottom: 100%;
+  font-size: 16px;
+  width: 10vw;
+  line-height: 25px;
+  -webkit-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 .show-nav{
@@ -272,7 +339,7 @@ html{
   margin-bottom: 5px;
 }
 .navigation-pane > div > div:last-child > a:hover{
-  margin-right: 10px;
+  padding-right: 10px;
 }
 
 body{
@@ -294,7 +361,7 @@ body{
   width: 100%;
   position: relative;
   background: transparent;
-  z-index: 7;
+  z-index: 0;
   top: 0;
   -webkit-transform: translateY(0);
       -ms-transform: translateY(0);
@@ -460,6 +527,8 @@ body{
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
 .arrow-right > img{
@@ -468,8 +537,6 @@ body{
           transform: rotateZ(90deg);
     width: 80px;
     margin-top: -4rem;
-  -webkit-filter: drop-shadow(0 0 1px rgba(0,0,0,0.3));
-          filter: drop-shadow(0 0 1px rgba(0,0,0,0.3));
   cursor: pointer;
 }
 .arrow-right {
@@ -491,6 +558,8 @@ body{
       -ms-flex-align: center;
           align-items: center;
     cursor: pointer;
+      -webkit-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
       transition: all 0.3s ease-in-out;
 }
 .arrow-left > img{
@@ -499,8 +568,6 @@ body{
   -webkit-transform: rotateZ(-90deg);
       -ms-transform: rotate(-90deg);
           transform: rotateZ(-90deg);
-  -webkit-filter: drop-shadow(0 0 1px rgba(0,0,0,0.3));
-          filter: drop-shadow(0 0 1px rgba(0,0,0,0.3));
     cursor: pointer;
 }
 .hide-arrow{
@@ -541,12 +608,54 @@ body{
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.work-panel-white > div:nth-child(2){
+ background: #d26e32;
+}
+.work-panel-white > div:nth-child(3){
+ background: #555fdd;
+}
+.work-panel-white > div:nth-child(4){
+ background: #9cf9c9;
+}
+.work-panel-white > div:nth-child(5){
+ background: #e5e5e5;
+}
+.work-panel-white > div:nth-child(6){
+ background: #ed3833;
+}
+.work-panel-white > div:nth-child(7){
+ background: #3e363b;
+}
+
+
+.project-img{
+  position: relative;
+  top: -4rem;
+}
+.project-img > img {
+  width: 100%;
+}
+
+.project-link{
+  position: relative;
+  top: -5rem;
+  z-index: 7;
+  text-decoration: none;
+  padding: 5px 20px;
+  color: white;
+  border: 2px solid currentColor;
+  border-radius: 3px;
 }
 
 .page-indicator{
@@ -676,8 +785,8 @@ body{
 .quote-panel ::before{
   z-index: -1;
   background: url(../img/back2.jpg);
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
+  -webkit-filter: grayscale(1) blur(5px);
+          filter: grayscale(1) blur(5px);
   background-position: center;
   background-size: cover;
   width: 110%;
@@ -867,6 +976,11 @@ body{
     width: 30px;
     height: 30px;
   }
+
+  .gh-tip,.l-tip,.i-tip{
+    display: none;
+  }
+
 
 
   .panel-white > div > div.avatar{
